--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 ---
-<h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
-
-<div class="post">
-{{ content }}
-</div>
+<article>
+	<h2>{{ page.title }}</h2>
+	<p class="date"><span>{{ page.date | date_to_string }}</span></p>
+	{{ content }}
+	<p><a class="more" href="/">back</a></p>
+</article>
