--- a/css/screen.css
+++ b/css/screen.css
@@ -11,6 +11,16 @@ body, html {
 body {
   -webkit-font-smoothing: antialiased; }
 
+a {
+  color: #68a3cc; }
+
+p {
+  font-size: 1.4rem;
+  font-family: 'Sanchez', serif; }
+
+code {
+  color: #444; }
+
 .wrapper {
   height: 100%; }
 
@@ -28,12 +38,32 @@ header {
 
 h1 {
   color: #fff;
-  font-family: "patua_oneregular", serif;
   font-size: 130px;
   display: block;
   max-width: 850px;
   float: left;
   line-height: 125px; }
+
+h2, h2 a {
+  color: #181818;
+  font-size: 55px;
+  margin-bottom: 20px; }
+
+h1, h2 {
+  font-family: "patua_oneregular", serif; }
+
+p.date {
+  margin-bottom: 25px; }
+  p.date span {
+    font-family: "Helvetica", sans-serif;
+    font-size: 18px;
+    padding: 10px;
+    border-radius: 5px;
+    border: 2px solid #68a3cc;
+    color: #68a3cc; }
+
+.highlight {
+  margin-bottom: 10px; }
 
 .contact {
   margin-top: 80px;
@@ -55,14 +85,57 @@ h1 {
       .contact a.twitter:hover svg path {
         fill: #456c87; }
 
-.content {
+#content {
   overflow: hidden; }
 
-.content .row {
+.primary-column {
+  max-width: 960px;
+  padding-left: 30px; }
+
+#content .row {
   clear: both;
   position: relative;
   height: 100%;
   min-height: 100%;
   min-width: 100%;
   background-color: #f5f5f5;
+  padding-bottom: 100px;
   z-index: 10; }
+
+a.more {
+  display: block;
+  width: 100px;
+  text-align: center;
+  font-family: "Helvetica", sans-serif;
+  font-size: 18px;
+  padding: 8px 15px;
+  border-radius: 5px;
+  background: #68a3cc;
+  color: #fff;
+  margin: 30px 0; }
+  a.more:hover {
+    background: #7EB6DD; }
+
+article {
+  padding-top: 30px; }
+
+ul.posts {
+  list-style-type: none; }
+  ul.posts li {
+    padding-top: 30px; }
+
+footer {
+  border-top: 1px solid #dadada;
+  overflow: hidden; }
+
+img.me {
+  border-radius: 110px;
+  border: 8px solid #68a3cc;
+  margin: 30px;
+  float: left; }
+
+p.bio {
+  height: 200px;
+  width: 500px;
+  float: left;
+  padding-top: 65px; }
