--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,4 +1,9 @@
-.highlight  { background: #ffffff; }
+.highlight  { 
+	border-top: 1px solid #DADADA;
+	border-bottom: 1px solid #DADADA;
+	padding: 10px 0;
+	line-height: 22px;
+ }
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .highlight .k { font-weight: bold } /* Keyword */
