--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,20 +16,39 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/screen.css">
         <link href='http://fonts.googleapis.com/css?family=Sanchez' rel='stylesheet' type='text/css'>
-    </head>
-    <body>
 
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
+        <!--[if lt IE 9]>
+        <script src="/js/html5shiv.js"></script>
+        <![endif]-->
         <script src="/js/jquery-1.10.2.min.js"></script>
         <script src="/js/foundation.min.js"></script>
         <script src="/js/site.js" type="text/javascript"></script>
+
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-44446703-1', 'henryeverett.info');
+          ga('send', 'pageview');
+
+        </script>
+    </head>
+    <body>
+
+
 
         <div class="wrapper">
           <header>
             <div class="header-content">
               <h1 class="title">My name is Henry and I make things.</h1>
               <div class="contact">
-                <a href="#" class="email">{% include email.svg %}</a>
-                <a href="#" class="twitter">{% include twitter.svg %}</a>
+                <a href="mailto:me@henryeverett.info" class="email">{% include email.svg %}</a>
+                <a href="https://twitter.com/henryeverett" target="_blank" class="twitter">{% include twitter.svg %}</a>
               </div>
             </div>
           </header>
@@ -44,14 +63,19 @@
               </div>
             </div>
 
-          </section>
+          
+            <div class="last row">
 
-          <footer>
-            <img class="me" src="http://www.gravatar.com/avatar/53cf48b49016b9eb16a21c315c4dd9bb?s=200" />
-            <p class="bio">
-              My name is Henry Everett. I'm <a href="http://dribbble.com/henrysoup" target="_blank">mostly</a> a web &amp; iOS developer. I live in Bristol in the UK.<br/>Favourite things: cats, coffee, dinosaurs, pizza.<br/>Follow me on <a href="https://twitter.com/henryeverett/" target="_blank">Twitter</a> or <a href="mailto:me@henryeverett.info">email me</a>.
-            </p>
-          </footer>
+              <footer class="small-12 columns">
+                <img class="me" src="http://www.gravatar.com/avatar/53cf48b49016b9eb16a21c315c4dd9bb?s=200" />
+                <p class="bio">
+                  My name is Henry Everett. I'm <a href="http://dribbble.com/henrysoup" target="_blank">mostly</a> a web &amp; iOS developer. I live in Bristol in the UK. Favourite things: cats, coffee, dinosaurs, pizza. Follow me on <a href="https://twitter.com/henryeverett" target="_blank">Twitter</a> or <a href="mailto:me@henryeverett.info">email me</a>.
+                </p>
+              </footer>
+
+            </div>
+
+          </section>
         </div>
     </body>
 </html>
