--- a/css/screen.css
+++ b/css/screen.css
@@ -4,19 +4,21 @@
   src: url("fonts/patuaone-regular-webfont.eot?#iefix") format("embedded-opentype"), url("fonts/patuaone-regular-webfont.woff") format("woff"), url("fonts/patuaone-regular-webfont.ttf") format("truetype"), url("fonts/patuaone-regular-webfont.svg#patua_oneregular") format("svg");
   font-weight: normal;
   font-style: normal; }
-
 body, html {
   height: 100%; }
 
 body {
-  -webkit-font-smoothing: antialiased; }
+  -webkit-font-smoothing: antialiased;
+  font-family: 'Sanchez', serif; }
 
 a {
   color: #68a3cc; }
 
+p, ul {
+  font-size: 1.4em; }
+
 p {
-  font-size: 1.4rem;
-  font-family: 'Sanchez', serif; }
+  text-align: justify; }
 
 code {
   color: #444; }
@@ -59,7 +61,7 @@ p.date {
     font-size: 18px;
     padding: 10px;
     border-radius: 5px;
-    border: 2px solid #68a3cc;
+    border: 1px solid #68a3cc;
     color: #68a3cc; }
 
 .highlight {
@@ -90,7 +92,8 @@ p.date {
 
 .primary-column {
   max-width: 960px;
-  padding-left: 30px; }
+  padding-left: 30px;
+  padding-right: 30px; }
 
 #content .row {
   clear: both;
@@ -120,13 +123,17 @@ article {
   padding-top: 30px; }
 
 ul.posts {
+  margin: 0;
   list-style-type: none; }
   ul.posts li {
     padding-top: 30px; }
 
+#content .last {
+  padding-bottom: 0; }
+
 footer {
-  border-top: 1px solid #dadada;
-  overflow: hidden; }
+  background-color: #FDFCFC;
+  border-top: 1px solid #dadada; }
 
 img.me {
   border-radius: 110px;
@@ -135,7 +142,23 @@ img.me {
   float: left; }
 
 p.bio {
-  height: 200px;
-  width: 500px;
+  max-width: 500px;
   float: left;
-  padding-top: 65px; }
+  padding: 65px 30px 0; }
+
+@media only screen and (max-width: 40em) {
+  h1 {
+    font-size: 80px;
+    line-height: 80px; }
+
+  p, ul {
+    font-size: 1.2em; }
+
+  img.me {
+    margin: -60px auto -20px;
+    display: block;
+    float: none; } }
+@media only screen and (max-width: 64.063em) {
+  p.bio {
+    float: none;
+    margin: 0 auto 30px; } }
