--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -14,7 +14,7 @@ a {
 }
 
 p, ul {
-	font-size: 1.4em;
+	font-size: 26px;
 }
 
 p {
@@ -190,6 +190,7 @@ p.bio {
 	float: left;
 	//padding-top: 65px;
 	padding: 65px 30px 0;
+	font-size: 23px;
 }
 
 
@@ -201,7 +202,7 @@ p.bio {
 	}
 
 	p, ul {
-		font-size: 1.2em;
+		font-size: 23px;
 	}
 
 	img.me {
