--- a/css/screen.css
+++ b/css/screen.css
@@ -15,7 +15,7 @@ a {
   color: #68a3cc; }
 
 p, ul {
-  font-size: 1.4em; }
+  font-size: 26px; }
 
 p {
   text-align: justify; }
@@ -144,7 +144,8 @@ img.me {
 p.bio {
   max-width: 500px;
   float: left;
-  padding: 65px 30px 0; }
+  padding: 65px 30px 0;
+  font-size: 23px; }
 
 @media only screen and (max-width: 40em) {
   h1 {
@@ -152,7 +153,7 @@ p.bio {
     line-height: 80px; }
 
   p, ul {
-    font-size: 1.2em; }
+    font-size: 23px; }
 
   img.me {
     margin: -60px auto -20px;
