--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -6,7 +6,7 @@ body, html {
 
 body {
 	-webkit-font-smoothing: antialiased;
-	font-family: 'Sanchez', serif;
+	font-family: 'Roboto', serif;
 }
 
 a {
@@ -14,11 +14,12 @@ a {
 }
 
 p, ul {
-	font-size: 26px;
+	font-size: 22px;
 }
 
 p {
 	text-align: justify;
+	line-height: 1.5em;
 }
 
 code {
@@ -54,8 +55,12 @@ h1 {
 
 h2, h2 a {
 	color: #181818;
-	font-size: 55px;
+	font-size: 48px;
 	margin-bottom: 20px;
+}
+
+h2 a:hover {
+	color: #68a3cc;
 }
 
 h1, h2 {
@@ -131,18 +136,18 @@ p.date {
 	height: 100%;
 	min-height: 100%;
 	min-width: 100%;
-	background-color: #f5f5f5;
+	background-color: #FDFCFC;
 	padding-bottom: 100px;
 	z-index: 10;
 }
 
 a.more {
 	display: block;
-	width: 100px;
+	width: 80px;
 	text-align: center;
 	font-family: "Helvetica", sans-serif;
 	font-size: 18px;
-	padding: 8px 15px;
+	padding: 5px 15px;
 	border-radius: 5px;
 	background: #68a3cc;
 	color: #fff;
@@ -173,7 +178,7 @@ ul.posts {
 }
 
 footer {
-	background-color: #FDFCFC;
+	background-color: #F5F5F5;
 	border-top: 1px solid #dadada;
 }
 
@@ -189,7 +194,7 @@ p.bio {
 	max-width: 500px;
 	float: left;
 	//padding-top: 65px;
-	padding: 65px 30px 0;
+	padding: 52px 30px 0;
 	font-size: 23px;
 }
 
