--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,10 @@
         <!--[if lt IE 9]>
         <script src="/js/html5shiv.js"></script>
         <![endif]-->
-        <script src="/js/jquery-1.10.2.min.js"></script>
-        <script src="/js/foundation.min.js"></script>
-        <script src="/js/site.js" type="text/javascript"></script>
+        <script type="text/javascript" src="/js/jquery-1.10.2.min.js"></script>
+        <script type="text/javascript" src="/js/foundation.min.js"></script>
+        <script type="text/javascript" src="/js/site.js" type="text/javascript"></script>
+        <script type="text/javascript" src="/js/jquery.githubRepoWidget.min.js"></script>
 
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -57,13 +58,13 @@
 
             <div class="row">
               <div class="primary-column small-12 columns">
-                
+
                {{ content }}
 
               </div>
             </div>
 
-          
+
             <div class="last row">
 
               <footer class="small-12 columns">
