--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -169,12 +169,16 @@ ul.posts {
 	li {
 		padding-top: 30px;
 	}
-	
+
 	list-style-type: none;
 }
 
 #content .last {
 	padding-bottom: 0;
+}
+
+.github-widget {
+	margin: 60px 0px;
 }
 
 footer {
@@ -199,7 +203,7 @@ p.bio {
 }
 
 
-@media only screen and (max-width: 40em) { 
+@media only screen and (max-width: 40em) {
 
 	h1 {
 		font-size: 80px;
@@ -218,7 +222,7 @@ p.bio {
 
 }
 
-@media only screen and (max-width:  64.063em) { 
+@media only screen and (max-width:  64.063em) {
 
 		p.bio {
 			float: none;
