--- a/css/screen.scss
+++ b/css/screen.scss
@@ -1,4 +1,6 @@
-@import "typography";
+---
+---
+@import 'typography';
 
 body, html {
 	height:100%;
@@ -32,12 +34,21 @@ code {
 
 header {
 	background: #68a3cc;
-	width: 100%;
+	width: 600px;
 	overflow: hidden;
 	padding-top: 15px;
 	padding-left: 30px;
-	padding-bottom: 350px;
+	padding-right: 30px;
+	padding-bottom: 60px;
 	z-index: 30;
+	position: fixed;
+	height: 100%;
+
+	@media only screen and (max-width: 60em) {
+		position: static;
+		width: 100%;
+		height: auto;
+	}
 }
 
 .header-content {
@@ -45,25 +56,27 @@ header {
 }
 
 h1 {
+	margin-top: 20px;
 	color: #fff;
-	font-size: 130px;
+	font-size: 92px;
 	display: block;
-	max-width: 850px;
+	max-width: 550px;
 	float: left;
-	line-height: 125px;
+	line-height: 90px;
 }
 
 h2, h2 a {
-	color: #181818;
-	font-size: 48px;
+	color: lighten(#181818, 20%);
+	
+	font-size: 42px;
 	margin-bottom: 20px;
 }
 
 h2 a:hover {
-	color: #68a3cc;
+	color: darken(#68a3cc, 10%);
 }
 
-h1, h2 {
+h1 {
 	font-family: "patua_oneregular", serif;
 }
 
@@ -87,7 +100,7 @@ p.date {
 }
 
 .contact {
-	margin-top: 80px;
+	margin-top: 40px;
 	float: left;
 	clear: both;
 
@@ -121,13 +134,19 @@ p.date {
 
 #content {
 	overflow:hidden;
+	margin-left: 600px;
+
+
+	@media only screen and (max-width: 60em) {
+		margin-left: 0;
+	}
 }
 
 .primary-column {
 	max-width: 960px;
 	padding-left: 30px;
 	padding-right: 30px;
-
+	max-width: 925px;
 }
 
 #content .row {
@@ -136,9 +155,9 @@ p.date {
 	height: 100%;
 	min-height: 100%;
 	min-width: 100%;
-	background-color: #FDFCFC;
 	padding-bottom: 100px;
 	z-index: 10;
+	
 }
 
 a.more {
@@ -182,7 +201,7 @@ ul.posts {
 }
 
 footer {
-	background-color: #F5F5F5;
+	background-color: #FCFCFC;
 	border-top: 1px solid #dadada;
 }
 
@@ -195,7 +214,7 @@ img.me {
 
 
 p.bio {
-	max-width: 500px;
+	max-width: 425px;
 	float: left;
 	//padding-top: 65px;
 	padding: 52px 30px 0;
@@ -205,24 +224,22 @@ p.bio {
 
 @media only screen and (max-width: 40em) {
 
-	h1 {
-		font-size: 80px;
-		line-height: 80px;
-	}
-
 	p, ul {
 		font-size: 23px;
 	}
+
+
+
+}
+
+@media only screen and (max-width:  80em) {
+
 
 	img.me {
 		margin: -60px auto -20px;
 		display: block;
 		float: none;
 	}
-
-}
-
-@media only screen and (max-width:  64.063em) {
 
 		p.bio {
 			float: none;
