--- a/css/screen.scss
+++ b/css/screen.scss
@@ -222,7 +222,7 @@ p.bio {
 	float: left;
 	//padding-top: 65px;
 	padding: 52px 30px 0;
-	font-size: 23px;
+	font-size: 22px;
 }
 
 
@@ -232,7 +232,9 @@ p.bio {
 		font-size: 23px;
 	}
 
-
+	h1 {
+		display: none;
+	}
 
 }
 
