--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -115,7 +115,7 @@ p {
 		width: 190px;
 		height: 190px;
 		margin: 5px;
-		background: url("/assets/about/henry-face.png") no-repeat;
+		background: url("/assets/about/henry-face.jpg") no-repeat;
 		background-size: 300px;
 		background-position-x: -80px;
 		background-position-y: -6px;
